--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     "minimum-stability": "dev",
     "require": {
          "guzzlehttp/guzzle": "^7.0.1"
+    },
+    "extra": {
+    "laravel": {
+        "providers": [
+            "AdewlaeCharles\\Smeify\\SmeifyServiceProvider"
+        ]
     }
+}
 }
