added auto discovery

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "email": "shyprince1@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
          "guzzlehttp/guzzle": "^7.0.1"
     },
