trying to fix provider autoload issue

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
      "keywords": [
         "adewalecharles",
-        "smeify"
+        "smeify",
+        "bills payment"
     ],
     "homepage": "https://github.com/adewalecharles/smeify",
     "license": "MIT",
